# program_registery

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  db.docker-compose.yaml  docker-compose.yml  server.docker-compose.yaml  server.docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
migrations/: 20240724195914_create_programs.sql  20240725144029_add_version.sql  20240726202456_unique_hash.sql  20240729180950_builtins.sql  20240729185706_layout.sql
src/: layout_info.rs  main.rs
