[package]
name = "program_registery"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/HerodotusDev/program_registery"


[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.6", features = ["io"] }
cairo-lang-starknet-classes = "2.6.4"
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4"] }
cairo-vm = { version = '1.0.0-rc6' }
starknet-crypto = "0.6.1"
lazy_static = "1.5.0"
tracing = "0.1.40"
